test/invalid/idl/constructor-escaped.webidl
interface mixin Constructor {
  object _constructor();
};
